[package]
name = "rust_ti"
version = "2.1.2"
edition = "2021"
authors = ["ChironMind"]
description = "A fully configurable technical indicators library with over 70 unique indicators written in pure Rust"
readme = "README.md"
repository = "https://github.com/ChironMind/rustTI"
homepage = "https://github.com/ChironMind/rustTI"
license = "MIT"
keywords = [
	"trading", 
	"technical-analysis", 
	"finance", 
	"indicators",
	"rust"
]
categories = ["finance", "mathematics", "science", "algorithms"]
exclude = ["/assets", "/.git", "/.github"]
documentation = "https://docs.rs/rust_ti/latest/rust_ti/"

[badges]
docsrs = { status = "true" }
github-actions = { repository = "ChironMind/RustTI", workflow = "rust.yml", branch = "main" }

[[example]]
name = "reference"
path = "examples/reference.rs"

[dependencies]
