[package]
name = "centaur_technical_indicators"
version = "1.0.0"
edition = "2024"
authors = ["ChironMind"]
description = "Centaur Technical Indicators - A fully configurable technical indicators library with over 70 unique indicators written in pure Rust"
readme = "README.md"
repository = "https://github.com/ChironMind/CentaurTechnicalIndicators-Rust"
homepage = "https://centaurlabs.pages.dev/"
license = "MIT"
keywords = [
	"trading", 
	"technical-analysis", 
	"finance", 
	"indicators",
	"rust"
]
categories = ["finance", "mathematics", "science", "algorithms"]
exclude = ["/assets", "/.git", "/.github"]
documentation = "https://docs.rs/centaur_technical_indicators"

[badges]
docsrs = { status = "true" }
github-actions = { repository = "ChironMind/CentaurTechnicalIndicators-Rust", workflow = "rust.yml", branch = "main" }

[[example]]
name = "reference"
path = "examples/reference.rs"

[dependencies]
